--- a/Cinestar-app/SplashScreen.xaml
+++ b/Cinestar-app/SplashScreen.xaml
@@ -1,43 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Cinestar_app.CityPickerPage"
-             BackgroundColor="#051851"
-             Title="Izaberi grad">
+             x:Class="Cinestar_app.SplashPage"
+             BackgroundColor="#051851">
 
-    <ScrollView>
-        <StackLayout Padding="20" Spacing="20">
-            <Image Source="logo.png"
-                   HeightRequest="90"
-                   HorizontalOptions="Center"
-                   Margin="0,20"/>
-            <Label Text="ODABERI GRAD:"
-                   TextColor="White"
-                   FontSize="22"
-                   FontAttributes="Bold"
-                   HorizontalOptions="Center"/>
-            <ListView x:Name="CitiesListView"
-                      BackgroundColor="Transparent"
-                      SeparatorVisibility="None"
-                      RowHeight="60">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout>
-                                <BoxView HeightRequest="1"
-                                         Color="#363d39"
-                                         HorizontalOptions="FillAndExpand"/>
-                                <Label Text="{Binding .}"
-                                       FontSize="20"
-                                       FontAttributes="Bold"
-                                       TextColor="White"
-                                       HorizontalOptions="Center"
-                                       Padding="0,10"/>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </StackLayout>
-    </ScrollView>
+    <StackLayout VerticalOptions="Center" HorizontalOptions="Center" Spacing="20">
+        <Image x:Name="LogoImage" Source="logo.png" HeightRequest="100" Opacity="0"/>
+        <Label x:Name="WelcomeLabel" Text="Dobrodošli u Cinestar App!" 
+               TextColor="White" FontSize="24" FontAttributes="Bold" Opacity="0"/>
+    </StackLayout>
 </ContentPage>
